# dir2md

./: .gitignore  CONTEXT.md  README.md  SOURCE_CONTEXT_BUNDLE.md  TODO  context_bundle.md  pyproject.toml
.github/workflows/: ci.yml
src/dir2md/: constants.py  main.py  merge.py  split.py
tests/: test_helperfuncs.py  test_mergeandunmerge.py  test_safety.py
