[project]
name = "dir2md"
version = "0.1.1"
description = "Convert directory context to markdown"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
dir2md = "dir2md.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dir2md"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.bumpversion]
# run `uvx bump-my-version bump patch` to bump version
current_version = "0.1.1"
commit = true
tag = true
